@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2008  Free Software Foundation, Inc.
+# Copyright (C) 2008, 2009  Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -76,13 +76,12 @@ unset TESTS || :
 ) >stdout
 cat stdout
 
-grep '1 [tT]ests' stdout && exit 1
-grep '^[^1]* [tT]est ' stdout && exit 1
-grep '1 .* were ' stdout && exit 1
-grep '^[^1]* was' stdout && exit 1
-grep 'All 1 ' stdout && exit 1
-grep '^ .*[tT]est' stdout && exit 1
-$EGREP '1 (un)?expected (failures|passes)' stdout && exit 1
-$EGREP '[^1] (un)?expected (failure|pass)\)' stdout && exit 1
+grep '1 [tT]ests' stdout && Exit 1
+grep '[02-9] [tT]est ' stdout && Exit 1
+grep '1 .* were ' stdout && Exit 1
+grep '[02-9].* was .*run' stdout && Exit 1
+grep 'All 1 ' stdout && Exit 1
+$EGREP '1 (un)?expected (failures|passes)' stdout && Exit 1
+$EGREP '[^1] (un)?expected (failure|pass)\)' stdout && Exit 1
 
 :
