@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2008  Free Software Foundation, Inc.
+# Copyright (C) 2008, 2009  Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -33,8 +33,10 @@ bin_PROGRAMS = foo
 foo_SOURCES = foo.c
 dist_man_MANS = foo.1
 
+# We write `./foo.1' inside the rule on purpose, to avoid VPATH rewriting
+# done by some `make' implementations.
 foo.1: foo$(EXEEXT)
-	echo man page for foo$(EXEEXT) > foo.1
+	echo man page for foo$(EXEEXT) > ./foo.1
 
 ## Ignore warnings about overridden variables
 AUTOMAKE_OPTIONS = -Wno-override
