@@ -1,5 +1,13 @@
 2009-03-07  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	Solaris make testsuite fixes.
+	* tests/check10.test: When a rule fails, Solaris make will
+	output the complete command that failed; in this case the test
+	suite driver.  Adjust the test to not bogusly match lines from
+	the driver, rather than its output.
+	* tests/distcleancheck.test: Avoid triggering VPATH rewriting,
+	not desirable in this test.
+
 	testsuite: SKIP compile tests if configure found no compiler.
 	* tests/depend6.test: configure will exit 77 if AC_PROG_CC found
 	no working compiler.  Allow the test to be SKIPped in that case.
